--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Sayfası</title>
 
-    <!-- CSS'yi bağlayan en önemli satır -->
+    <!-- Google doğrulama -->
+    <meta name="google-site-verification" content="pEYBlkTPZ_ExqWmFjT0K2vKxxfYWvrEHEO9w_Ar_Apw" />
+
+    <!-- CSS bağlantısı (isteğe bağlı, dosya ayrı) -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h1>GitHub Pages Test</h1>
-    <p>Bu yazı CSS ile renklendirilmiştir.</p>
+    <p>Bu yazı görünüm için test amaçlıdır.</p>
 
     <div class="kutu">Bu bir test kutusudur.</div>
 
 </body>
 </html>
+
